--- a/src/Features/CSharp/Portable/CSharpFeaturesResources.resx
+++ b/src/Features/CSharp/Portable/CSharpFeaturesResources.resx
@@ -524,4 +524,7 @@
   <data name="Convert_for_to_foreach" xml:space="preserve">
     <value>Convert 'for' to 'foreach'</value>
   </data>
+  <data name="Allow_unsafe_code_in_this_project" xml:space="preserve">
+    <value>Allow unsafe code in this project</value>
+  </data>
 </root>
