--- a/src/Compilers/CSharp/Portable/xlf/CSharpResources.cs.xlf
+++ b/src/Compilers/CSharp/Portable/xlf/CSharpResources.cs.xlf
@@ -8820,6 +8820,16 @@ Pokud chcete odstranit toto varování, můžete místo toho použít /reference
         <target state="new">Parentheses are required around the switch governing expression.</target>
         <note />
       </trans-unit>
+      <trans-unit id="ERR_TupleElementNameMismatch">
+        <source>The name '{0}' does not identify tuple element {1}.</source>
+        <target state="new">The name '{0}' does not identify tuple element {1}.</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="ERR_DeconstructParameterNameMistmatch">
+        <source>The name '{0}' does not match the corresponding 'Deconstruct' parameter '{1}'.</source>
+        <target state="new">The name '{0}' does not match the corresponding 'Deconstruct' parameter '{1}'.</target>
+        <note />
+      </trans-unit>
     </body>
   </file>
 </xliff>
