--- a/src/Workspaces/Core/Portable/xlf/WorkspacesResources.de.xlf
+++ b/src/Workspaces/Core/Portable/xlf/WorkspacesResources.de.xlf
@@ -1087,6 +1087,16 @@
         <target state="new">Style</target>
         <note />
       </trans-unit>
+      <trans-unit id="Probable_JSON_string_detected">
+        <source>Probable JSON string detected</source>
+        <target state="new">Probable JSON string detected</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="Enable_JSON_editor_features">
+        <source>Enable JSON editor features</source>
+        <target state="new">Enable JSON editor features</target>
+        <note />
+      </trans-unit>
     </body>
   </file>
 </xliff>
