--- a/src/Features/Core/Portable/xlf/FeaturesResources.pl.xlf
+++ b/src/Features/Core/Portable/xlf/FeaturesResources.pl.xlf
@@ -1028,6 +1028,11 @@ Czy chcesz kontynuować?</target>
         <target state="translated">Edytuj i kontynuuj</target>
         <note />
       </trans-unit>
+      <trans-unit id="Style">
+        <source>Style</source>
+        <target state="translated">Styl</target>
+        <note />
+      </trans-unit>
       <trans-unit id="Suppress_0">
         <source>Suppress {0}</source>
         <target state="translated">Pomiń element {0}</target>
