--- a/src/VisualStudio/VisualBasic/Impl/xlf/BasicVSResources.it.xlf
+++ b/src/VisualStudio/VisualBasic/Impl/xlf/BasicVSResources.it.xlf
@@ -272,29 +272,14 @@
         <target state="translated">Separa gruppi di direttive import</target>
         <note />
       </trans-unit>
-      <trans-unit id="In_arithmetic_expressions">
-        <source>In arithmetic expressions:   ^   *   /   \   Mod   +   -   &amp;</source>
-        <target state="new">In arithmetic expressions:   ^   *   /   \   Mod   +   -   &amp;</target>
+      <trans-unit id="In_arithmetic_binary_operators">
+        <source>In arithmetic expressions:  ^  *  /  \  Mod  +  -  &amp;  &lt;&lt;  &gt;&gt;</source>
+        <target state="new">In arithmetic expressions:  ^  *  /  \  Mod  +  -  &amp;  &lt;&lt;  &gt;&gt;</target>
         <note />
       </trans-unit>
-      <trans-unit id="In_logical_expressions">
-        <source>In logical expressions:   And   AndAlso   Or   OrElse</source>
-        <target state="new">In logical expressions:   And   AndAlso   Or   OrElse</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="In_relational_expressions">
-        <source>In relational expressions:   =   &lt;&gt;   &lt;   &lt;=   &gt;   &gt;=   Is   Like</source>
-        <target state="new">In relational expressions:   =   &lt;&gt;   &lt;   &lt;=   &gt;   &gt;=   Is   Like</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="In_shift_expressions">
-        <source>In shift expressions:   &lt;&lt;   &gt;&gt;</source>
-        <target state="new">In shift expressions:   &lt;&lt;   &gt;&gt;</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="In_assignment_expressions">
-        <source>In assignment expressions:   =   ^=   *=   /=   \=   +=   -=   &amp;=   &lt;&lt;=   &gt;&gt;=</source>
-        <target state="new">In assignment expressions:   =   ^=   *=   /=   \=   +=   -=   &amp;=   &lt;&lt;=   &gt;&gt;=</target>
+      <trans-unit id="In_other_binary_operators">
+        <source>In other binary operators:  =  &lt;&gt;  &lt;  &gt;  &lt;=  &gt;=  Like Is  And  Or  </source>
+        <target state="new">In other binary operators:  =  &lt;&gt;  &lt;  &gt;  &lt;=  &gt;=  Like Is  And  Or  </target>
         <note />
       </trans-unit>
     </body>
