--- a/src/VisualStudio/CSharp/Impl/xlf/CSharpVSResources.pl.xlf
+++ b/src/VisualStudio/CSharp/Impl/xlf/CSharpVSResources.pl.xlf
@@ -697,49 +697,14 @@
         <target state="new">Generate Event Subscription Command Handler</target>
         <note />
       </trans-unit>
-      <trans-unit id="In_arithmetic_expressions">
-        <source>In arithmetic expressions:   *   /   %   +   -</source>
-        <target state="new">In arithmetic expressions:   *   /   %   +   -</target>
+      <trans-unit id="In_arithmetic_binary_operators">
+        <source>In arithmetic operators:  *  /  %  +  -  &lt;&lt;  &gt;&gt;  &amp;  ^  |</source>
+        <target state="new">In arithmetic operators:  *  /  %  +  -  &lt;&lt;  &gt;&gt;  &amp;  ^  |</target>
         <note />
       </trans-unit>
-      <trans-unit id="In_bitwise_expressions">
-        <source>In bitwise expressions:   &amp;   |   ^</source>
-        <target state="new">In bitwise expressions:   &amp;   |   ^</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="In_coalesce_expression">
-        <source>In coalesce expression:   ??</source>
-        <target state="new">In coalesce expression:   ??</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="In_equality_expressions">
-        <source>In_equality expressions:   ==   !=</source>
-        <target state="new">In_equality expressions:   ==   !=</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="In_logical_expressions">
-        <source>In logical expressions:   &amp;&amp;   ||</source>
-        <target state="new">In logical expressions:   &amp;&amp;   ||</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="In_relational_expressions">
-        <source>In relational expressions:   &lt;   &lt;=   &gt;   &gt;=   is   as</source>
-        <target state="new">In relational expressions:   &lt;   &lt;=   &gt;   &gt;=   is   as</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="In_shift_expressions">
-        <source>In shift expressions:   &lt;&lt;   &gt;&gt;</source>
-        <target state="new">In shift expressions:   &lt;&lt;   &gt;&gt;</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="In_assignment_expressions">
-        <source>In assignment expressions:   =   *=   /=   %=   +=   -=   &lt;&lt;=   &gt;&gt;=   &amp;=   |=   ^=</source>
-        <target state="new">In assignment expressions:   =   *=   /=   %=   +=   -=   &lt;&lt;=   &gt;&gt;=   &amp;=   |=   ^=</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="In_cast_expression">
-        <source>In cast expression:  (type)expression</source>
-        <target state="new">In cast expression:  (type)expression</target>
+      <trans-unit id="In_other_binary_operators">
+        <source>In other binary operators:  &lt;  &gt;  &lt;=  &gt;=  is  as  ==  !=  &amp;&amp;  ||  ??</source>
+        <target state="new">In other binary operators:  &lt;  &gt;  &lt;=  &gt;=  is  as  ==  !=  &amp;&amp;  ||  ??</target>
         <note />
       </trans-unit>
     </body>
