--- a/src/VisualStudio/VisualBasic/Impl/BasicVSResources.resx
+++ b/src/VisualStudio/VisualBasic/Impl/BasicVSResources.resx
@@ -279,19 +279,10 @@
   <data name="Separate_import_directive_groups" xml:space="preserve">
     <value>Separate import directive groups</value>
   </data>
-  <data name="In_arithmetic_expressions" xml:space="preserve">
-    <value>In arithmetic expressions:   ^   *   /   \   Mod   +   -   &amp;</value>
+  <data name="In_arithmetic_binary_operators" xml:space="preserve">
+    <value>In arithmetic expressions:  ^  *  /  \  Mod  +  -  &amp;  &lt;&lt;  &gt;&gt;</value>
   </data>
-  <data name="In_logical_expressions" xml:space="preserve">
-    <value>In logical expressions:   And   AndAlso   Or   OrElse</value>
-  </data>
-  <data name="In_relational_expressions" xml:space="preserve">
-    <value>In relational expressions:   =   &lt;&gt;   &lt;   &lt;=   &gt;   &gt;=   Is   Like</value>
-  </data>
-  <data name="In_shift_expressions" xml:space="preserve">
-    <value>In shift expressions:   &lt;&lt;   &gt;&gt;</value>
-  </data>
-  <data name="In_assignment_expressions" xml:space="preserve">
-    <value>In assignment expressions:   =   ^=   *=   /=   \=   +=   -=   &amp;=   &lt;&lt;=   &gt;&gt;=</value>
+  <data name="In_other_binary_operators" xml:space="preserve">
+    <value>In other binary operators:  =  &lt;&gt;  &lt;  &gt;  &lt;=  &gt;=  Like Is  And  Or  </value>
   </data>
 </root>
