--- a/src/Compilers/VisualBasic/Portable/xlf/VBResources.it.xlf
+++ b/src/Compilers/VisualBasic/Portable/xlf/VBResources.it.xlf
@@ -8395,7 +8395,7 @@
 -vbruntime:&lt;file&gt;                 Compile with the alternate Visual Basic
                                   runtime in &lt;file&gt;.
 </source>
-        <target state="needs-review-translation">                  Opzioni del compilatore Visual Basic
+        <target state="translated">                  Opzioni del compilatore Visual Basic
 
                                   - FILE DI OUTPUT -
 /out:&lt;file&gt;                       Consente di specificare il nome del file di output.
@@ -8539,7 +8539,7 @@
                                   Consente di specificare un mapping per i nomi di percorso di origine
                                   visualizzati dal compilatore.
 /platform:&lt;stringa&gt;                Limita le piattaforme su cui è possibile seguire questo codice. 
-                                  Il valore deve essere x86, x64, Itanium, arm,
+                                  Il valore deve essere x86, x64, Itanium, arm, arm64,
                                   AnyCPU32BitPreferred o anycpu (impostazione predefinita).
 /preferreduilang                  Consente di specificare il nome del linguaggio di output preferito.
 /sdkpath:&lt;percorso&gt;                   Percorso della directory di .NET Framework SDK 
