--- a/src/Compilers/VisualBasic/Portable/xlf/VBResources.ja.xlf
+++ b/src/Compilers/VisualBasic/Portable/xlf/VBResources.ja.xlf
@@ -8395,7 +8395,7 @@
 -vbruntime:&lt;file&gt;                 Compile with the alternate Visual Basic
                                   runtime in &lt;file&gt;.
 </source>
-        <target state="needs-review-translation">                  Visual Basic コンパイラのオプション
+        <target state="translated">                  Visual Basic コンパイラのオプション
 
                                   - 出力ファイル -
 /out:&lt;file&gt;                       出力ファイル名を指定します。
@@ -8539,7 +8539,7 @@
                                   コンパイラが出力するソース パス名のマッピングを
                                   指定します。
 /platform:&lt;string&gt;                このコードを実行できるプラットフォームは 
-                                  x86、x64、Itanium、arm、
+                                  x86、x64、Itanium、arm、arm64、
                                   AnyCPU32BitPreferred、anycpu (既定) でなければなりません。
 /preferreduilang                  出力用の言語名を指定します。
 /sdkpath:&lt;path&gt;                   .NET Framework SDK ディレクトリ (mscorlib.dll)
