--- a/src/Compilers/VisualBasic/Portable/xlf/VBResources.ko.xlf
+++ b/src/Compilers/VisualBasic/Portable/xlf/VBResources.ko.xlf
@@ -8395,7 +8395,7 @@
 -vbruntime:&lt;file&gt;                 Compile with the alternate Visual Basic
                                   runtime in &lt;file&gt;.
 </source>
-        <target state="needs-review-translation">                  Visual Basic 컴파일러 옵션
+        <target state="translated">                  Visual Basic 컴파일러 옵션
 
                                   - 출력 파일 -
 /out:&lt;file&gt;                       출력 파일 이름을 지정합니다.
@@ -8539,7 +8539,7 @@
                                   컴파일러에서 소스 경로 이름 출력에 대한
                                   매핑을 지정합니다.
 /platform:&lt;string&gt;                이 코드를 실행할 수 있는 플랫폼을 
-                                  x86, x64, Itanium, arm,
+                                  x86, x64, Itanium, arm, arm64,
                                   AnyCPU32BitPreferred 또는 anycpu(기본값)로 제한합니다.
 /preferreduilang                  기본 출력 언어 이름을 지정합니다.
 /sdkpath:&lt;path&gt;                   .NET Framework SDK 디렉터리의 
