--- a/src/Compilers/VisualBasic/Portable/xlf/VBResources.pl.xlf
+++ b/src/Compilers/VisualBasic/Portable/xlf/VBResources.pl.xlf
@@ -8395,7 +8395,7 @@
 -vbruntime:&lt;file&gt;                 Compile with the alternate Visual Basic
                                   runtime in &lt;file&gt;.
 </source>
-        <target state="needs-review-translation">                  Opcje kompilatora Visual Basic
+        <target state="translated">                  Opcje kompilatora Visual Basic
 
                                   - PLIK WYJŚCIOWY -
 /out:&lt;plik&gt;                       Określa nazwę pliku wyjściowego.
@@ -8539,7 +8539,7 @@
                                   Określ mapowanie nazw ścieżek źródłowych wyprowadzanych
                                   przez kompilator.
 /platform:&lt;ciąg&gt;                  Ogranicz platformy, na jakich można uruchomić ten kod; 
-                                  dozwolone wartości: x86, x64, Itanium, arm,
+                                  dozwolone wartości: x86, x64, Itanium, arm, arm64,
                                   AnyCPU32BitPreferred lub anycpu (wartość domyślna).
 /preferreduilang                  Określ nazwę preferowanego języka wyjściowego.
 /sdkpath:&lt;ścieżka&gt;                Lokalizacja katalogu zestawu .NET Framework SDK
