--- a/src/Compilers/VisualBasic/Portable/xlf/VBResources.pt-BR.xlf
+++ b/src/Compilers/VisualBasic/Portable/xlf/VBResources.pt-BR.xlf
@@ -8395,7 +8395,7 @@
 -vbruntime:&lt;file&gt;                 Compile with the alternate Visual Basic
                                   runtime in &lt;file&gt;.
 </source>
-        <target state="needs-review-translation">                 Opções do Compilador do Visual Basic
+        <target state="translated">                 Opções do Compilador do Visual Basic
 
                                   – ARQUIVO DE SAÍDA –
 /out:&lt;file&gt;                       Especifica o nome do arquivo de saída.
@@ -8539,7 +8539,7 @@
                                   Especificar um mapeamento para nomes de caminhos de origem produzidos pelo
                                   compilador.
 /platform:&lt;string&gt;                Limitar em quais plataformas o código pode ser executado; 
-                                  deve ser x86, x64, Itanium, arm,
+                                  deve ser x86, x64, Itanium, arm, arm64,
                                   AnyCPU32BitPreferred ou anycpu (padrão).
 /preferreduilang                  Especificar o nome da linguagem de saída preferencial.
 /sdkpath:&lt;path&gt;                   Localização do diretório do SDK do .NET Framework
