--- a/src/Compilers/VisualBasic/Portable/xlf/VBResources.ru.xlf
+++ b/src/Compilers/VisualBasic/Portable/xlf/VBResources.ru.xlf
@@ -8395,7 +8395,7 @@
 -vbruntime:&lt;file&gt;                 Compile with the alternate Visual Basic
                                   runtime in &lt;file&gt;.
 </source>
-        <target state="needs-review-translation">                  Параметры компилятора Visual Basic
+        <target state="translated">                  Параметры компилятора Visual Basic
 
                                   - ВЫХОДНОЙ ФАЙЛ -
 /out:&lt;файл&gt;                       Задает имя выходного файла.
@@ -8539,7 +8539,7 @@
                                   Указать сопоставление для выходных данных имен исходного пути по
                                   компилятору.
 /platform:&lt;строка&gt;                Ограничить платформы, на которых может выполняться этот код: 
-                                  x86, x64, Itanium, arm,
+                                  x86, x64, Itanium, arm, arm64,
                                   AnyCPU32BitPreferred или anycpu (по умолчанию).
 /preferreduilang                  Указать имя предпочтительного языка вывода.
 /sdkpath:&lt;путь&gt;                   Расположение каталога пакета SDK .NET Framework
