--- a/src/Compilers/VisualBasic/Portable/xlf/VBResources.tr.xlf
+++ b/src/Compilers/VisualBasic/Portable/xlf/VBResources.tr.xlf
@@ -8395,7 +8395,7 @@
 -vbruntime:&lt;file&gt;                 Compile with the alternate Visual Basic
                                   runtime in &lt;file&gt;.
 </source>
-        <target state="needs-review-translation">                  Visual Basic Derleyici Seçenekleri
+        <target state="translated">                  Visual Basic Derleyici Seçenekleri
 
                                   - ÇIKIŞ DOSYASI -
 /out:&lt;file&gt;                       Çıkış dosyası adını belirtir.
@@ -8539,7 +8539,7 @@
                                   Derleyici tarafından kaynak yolu adları çıkışı için bir eşleme
                                   belirt.
 /platform:&lt;string&gt;                Bu kodun çalışabileceği platformları sınırla; 
-                                  x86, x64, Itanium, arm, AnyCPU32BitPreferred
+                                  x86, x64, Itanium, arm, arm64, AnyCPU32BitPreferred
                                   veya anycpu (varsayılan) olmalıdır.
 /preferreduilang                  Tercih edilen çıkış dilini belirt.
 /sdkpath:&lt;path&gt;                   .NET Framework SDK (mscorlib.dll) dizininin
