--- a/src/Compilers/VisualBasic/Portable/xlf/VBResources.zh-Hant.xlf
+++ b/src/Compilers/VisualBasic/Portable/xlf/VBResources.zh-Hant.xlf
@@ -8395,7 +8395,7 @@
 -vbruntime:&lt;file&gt;                 Compile with the alternate Visual Basic
                                   runtime in &lt;file&gt;.
 </source>
-        <target state="needs-review-translation">                  Visual Basic 編譯器選項
+        <target state="translated">                  Visual Basic 編譯器選項
 
                                   - 輸出檔案 -
 /out:&lt;檔案&gt;                       指定輸出檔案名稱。
@@ -8539,7 +8539,7 @@
                                   為編譯器輸出的來源路徑名稱
                                   指定對應。
 /platform:&lt;字串&gt;                限制這個程式碼可以在哪些平台執行; 
-                                  必須是 x86、x64、Itanium、arm、
+                                  必須是 x86、x64、Itanium、arm、arm64、
                                   AnyCPU32BitPreferred 或 anycpu (預設)。
 /preferreduilang                  指定慣用的輸出語言名稱。
 /sdkpath:&lt;路徑&gt;                   .NET Framework SDK 目錄的位置
