--- a/src/VisualStudio/Core/Def/xlf/ServicesVSResources.cs.xlf
+++ b/src/VisualStudio/Core/Def/xlf/ServicesVSResources.cs.xlf
@@ -1488,19 +1488,14 @@ Souhlasím se všemi výše uvedenými podmínkami:</target>
         <target state="translated">Nastavení nakonfigurovaná zde platí pouze pro váš počítač. Pokud je chcete nakonfigurovat tak, aby byla součástí vašeho řešení a přecházela mezi zařízeními, použijte soubory .editorconfig.</target>
         <note />
       </trans-unit>
-      <trans-unit id="Sync_Class_View">
-        <source>Sync Class View</source>
-        <target state="new">Sync Class View</target>
+      <trans-unit id="Field_preferences_colon">
+        <source>Field preferences:</source>
+        <target state="translated">Předvolby pole:</target>
         <note />
       </trans-unit>
-      <trans-unit id="CantApplyChangesUnexpectedError">
-        <source>Can't apply changes -- unexpected error: '{0}'</source>
-        <target state="new">Can't apply changes -- unexpected error: '{0}'</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="Live_code_analysis">
-        <source>Live code analysis</source>
-        <target state="translated">Dynamická analýza kódu</target>
+      <trans-unit id="Prefer_readonly">
+        <source>Prefer readonly</source>
+        <target state="translated">Upřednostnit jen pro čtení</target>
         <note />
       </trans-unit>
       <trans-unit id="Analyzing_0">
@@ -1513,14 +1508,19 @@ Souhlasím se všemi výše uvedenými podmínkami:</target>
         <target state="new">Manage naming styles</target>
         <note />
       </trans-unit>
-      <trans-unit id="Field_preferences_colon">
-        <source>Field preferences:</source>
-        <target state="new">Field preferences:</target>
+      <trans-unit id="CantApplyChangesUnexpectedError">
+        <source>Can't apply changes -- unexpected error: '{0}'</source>
+        <target state="new">Can't apply changes -- unexpected error: '{0}'</target>
         <note />
       </trans-unit>
-      <trans-unit id="Prefer_readonly">
-        <source>Prefer readonly</source>
-        <target state="new">Prefer readonly</target>
+      <trans-unit id="Sync_Class_View">
+        <source>Sync Class View</source>
+        <target state="new">Sync Class View</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="Live_code_analysis">
+        <source>Live code analysis</source>
+        <target state="new">Live code analysis</target>
         <note />
       </trans-unit>
     </body>
