--- a/src/VisualStudio/Core/Def/xlf/ServicesVSResources.tr.xlf
+++ b/src/VisualStudio/Core/Def/xlf/ServicesVSResources.tr.xlf
@@ -1389,7 +1389,7 @@ Geçerli durum için 'basit çözüm yükü' etkin. Hata ayıklama başlatıldı
       </trans-unit>
       <trans-unit id="Prefer_local_function_over_anonymous_function">
         <source>Prefer local function over anonymous function</source>
-        <target state="translated">Anonim işlev yerine yerel işlevi tercih edin</target>
+        <target state="translated">Anonim işlevler yerine yerel işlevleri tercih et</target>
         <note />
       </trans-unit>
       <trans-unit id="Prefer_deconstructed_variable_declaration">
@@ -1488,19 +1488,14 @@ Aşağıdakilerin tümünü onaylıyorum:</target>
         <target state="translated">Burada yapılandırılan ayarlar yalnızca makineniz için geçerlidir. Bu ayarları çözümünüzle birlikte taşımak için .editorconfig dosyalarını kullanın.</target>
         <note />
       </trans-unit>
-      <trans-unit id="Sync_Class_View">
-        <source>Sync Class View</source>
-        <target state="new">Sync Class View</target>
+      <trans-unit id="Field_preferences_colon">
+        <source>Field preferences:</source>
+        <target state="translated">Alan tercihleri:</target>
         <note />
       </trans-unit>
-      <trans-unit id="CantApplyChangesUnexpectedError">
-        <source>Can't apply changes -- unexpected error: '{0}'</source>
-        <target state="new">Can't apply changes -- unexpected error: '{0}'</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="Live_code_analysis">
-        <source>Live code analysis</source>
-        <target state="translated">Canlı kod analizi</target>
+      <trans-unit id="Prefer_readonly">
+        <source>Prefer readonly</source>
+        <target state="translated">Salt okunur özelliğini tercih et</target>
         <note />
       </trans-unit>
       <trans-unit id="Analyzing_0">
@@ -1513,14 +1508,19 @@ Aşağıdakilerin tümünü onaylıyorum:</target>
         <target state="new">Manage naming styles</target>
         <note />
       </trans-unit>
-      <trans-unit id="Field_preferences_colon">
-        <source>Field preferences:</source>
-        <target state="new">Field preferences:</target>
+      <trans-unit id="CantApplyChangesUnexpectedError">
+        <source>Can't apply changes -- unexpected error: '{0}'</source>
+        <target state="new">Can't apply changes -- unexpected error: '{0}'</target>
         <note />
       </trans-unit>
-      <trans-unit id="Prefer_readonly">
-        <source>Prefer readonly</source>
-        <target state="new">Prefer readonly</target>
+      <trans-unit id="Sync_Class_View">
+        <source>Sync Class View</source>
+        <target state="new">Sync Class View</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="Live_code_analysis">
+        <source>Live code analysis</source>
+        <target state="new">Live code analysis</target>
         <note />
       </trans-unit>
     </body>
