Distinguish irrefutable and refutable patterns in the `is` expression
Both refutable and irrefutable is-pattern matches affect definite assignment:
- an irrefutable match leaves pattern variables definitely assigned
- a refutable match is an error
Fixes #25890

Also, we check to see if a constant input makes the result refutable or irrefutable:
- If a constant cannot match the pattern, we issue a warning
- If a constant always matches a constant pattern, we issue a warning
The latter two are subject to compat council approval.
Fixes #16099

--- a/src/Compilers/CSharp/Portable/CSharpResources.resx
+++ b/src/Compilers/CSharp/Portable/CSharpResources.resx
@@ -5372,4 +5372,19 @@ To remove the warning, you can use /reference instead (set the Embed Interop Typ
   <data name="IDS_FeatureIndexingMovableFixedBuffers" xml:space="preserve">
     <value>indexing movable fixed buffers</value>
   </data>
+  <data name="ERR_IsPatternImpossible" xml:space="preserve">
+    <value>An expression of type '{0}' can never match the provided pattern.</value>
+  </data>
+  <data name="WRN_GivenExpressionNeverMatchesPattern" xml:space="preserve">
+    <value>The given expression never matches the provided pattern.</value>
+  </data>
+  <data name="WRN_GivenExpressionNeverMatchesPattern_Title" xml:space="preserve">
+    <value>The given expression never matches the provided pattern.</value>
+  </data>
+  <data name="WRN_GivenExpressionAlwaysMatchesConstant" xml:space="preserve">
+    <value>The given expression always matches the provided constant.</value>
+  </data>
+  <data name="WRN_GivenExpressionAlwaysMatchesConstant_Title" xml:space="preserve">
+    <value>The given expression always matches the provided constant.</value>
+  </data>
 </root>
