--- a/src/Test/Utilities/Portable/TestResource.resx
+++ b/src/Test/Utilities/Portable/TestResource.resx
@@ -185,6 +185,29 @@ namespace My
             int x = default;
         }
 
+        void Patterns(object o, object p)
+        {
+            var b = o is string s;
+            var c = o switch { "a" => 1, "b" => 2, _ => 3 };
+            switch (o, p)
+            {
+                case (2, 1): break;
+                case (2, 2) q: break;
+                case X(2, 3): break;
+                case X(2, 4) q: break;
+                case X { A: 2, B: 5 }: break;
+                case X { A: 2, B: 6 } q: break;
+                case X(2, 1) { A: 2, B: 7 }: break;
+                case X(2, 4) { A: 2, B: 8 } q: break;
+                case { A: 3, B: 9 }: break;
+                case { A: 3, B: 10 } q: break;
+                case X q: break;
+                case var (x, y) when x == y: break;
+                case var (x, (y, z)) when x == y: break;
+                case _: break;
+            }
+        }
+
         [method: Obsolete]
         public A([param: Obsolete] int goo) :
             base(1)
