--- a/src/Features/Core/Portable/xlf/FeaturesResources.de.xlf
+++ b/src/Features/Core/Portable/xlf/FeaturesResources.de.xlf
@@ -1028,6 +1028,11 @@ Möchten Sie fortfahren?</target>
         <target state="translated">Bearbeiten und Fortfahren</target>
         <note />
       </trans-unit>
+      <trans-unit id="Style">
+        <source>Style</source>
+        <target state="translated">Stil</target>
+        <note />
+      </trans-unit>
       <trans-unit id="Suppress_0">
         <source>Suppress {0}</source>
         <target state="translated">{0} unterdrücken</target>
@@ -2008,6 +2013,11 @@ Diese Version wird verwendet in: {2}</target>
       <trans-unit id="Make_field_readonly">
         <source>Make field readonly</source>
         <target state="new">Make field readonly</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="newval">
+        <source>newval</source>
+        <target state="new">newval</target>
         <note />
       </trans-unit>
     </body>
